为ba66911434ff847e7e10de1865401e9293e5d9f1所更改内容增加适配